[gd_scene load_steps=37 format=3 uid="uid://ceg0a8jxwnfae"]

[ext_resource type="Script" path="res://player/player.gd" id="1_7knqw"]
[ext_resource type="Resource" uid="uid://jvuono3vj3hl" path="res://player/attacks/slash_1.tres" id="2_06grq"]
[ext_resource type="Resource" uid="uid://c55jq6o5wd3i" path="res://player/attacks/slash_2.tres" id="3_msbl5"]
[ext_resource type="Script" path="res://common/actor-elements/state_machine.gd" id="4_mjfp3"]
[ext_resource type="Resource" uid="uid://dd1g32ki7pkhj" path="res://player/attacks/slash_3.tres" id="4_slkb2"]
[ext_resource type="Resource" uid="uid://cjkks7aky4txq" path="res://player/attacks/air_slash_1.tres" id="5_4ghsq"]
[ext_resource type="Script" path="res://player/states/player_idle.gd" id="5_jgl0y"]
[ext_resource type="Resource" uid="uid://bxgx105dqw7k7" path="res://player/attacks/air_slash_2.tres" id="6_56cec"]
[ext_resource type="Resource" uid="uid://c0k2cobe5t5ie" path="res://player/attacks/zone_in.tres" id="6_yg4su"]
[ext_resource type="Script" path="res://player/states/player_run.gd" id="6_yy7o3"]
[ext_resource type="Script" path="res://player/states/player_air.gd" id="7_7qn2t"]
[ext_resource type="PackedScene" uid="uid://ckgpg0ekvvmfi" path="res://common/passthru-platforms/pass_thru_collider_check.tscn" id="7_c8ppt"]
[ext_resource type="Resource" uid="uid://dfo327j7kggfr" path="res://player/attacks/air_slash_3.tres" id="7_ujuw6"]
[ext_resource type="Script" path="res://player/states/player_land.gd" id="8_m0mi4"]
[ext_resource type="Script" path="res://player/states/player_attack.gd" id="9_0f5gx"]
[ext_resource type="Resource" uid="uid://fsi5sxhtijjl" path="res://player/attacks/punch.tres" id="9_4hthk"]
[ext_resource type="Resource" uid="uid://1cvlje125a6o" path="res://player/attacks/air_kick.tres" id="10_w5e58"]
[ext_resource type="Resource" uid="uid://w5asob1k6fwp" path="res://player/swords/example/example_sword.tres" id="11_5lryx"]
[ext_resource type="Script" path="res://player/controllers/human_controller.gd" id="12_1q4mr"]
[ext_resource type="PackedScene" uid="uid://bcv8rw7q3owa" path="res://player/kite_model_test.tscn" id="12_lvsae"]
[ext_resource type="Script" path="res://common/actor-elements/hitbox.gd" id="12_u1r6y"]
[ext_resource type="Script" path="res://player/controllers/cutscene_controller.gd" id="13_rj60u"]
[ext_resource type="Script" path="res://common/actor-elements/health.gd" id="14_hr7l7"]
[ext_resource type="Script" path="res://common/actor-elements/hurtbox.gd" id="15_ggx7t"]
[ext_resource type="Script" path="res://player/player_interaction.gd" id="16_apitn"]
[ext_resource type="PackedScene" uid="uid://pr3binha3dff" path="res://player/inventory_vis.tscn" id="17_ui07v"]
[ext_resource type="Script" path="res://player/states/player_zonein.gd" id="18_0wu4t"]
[ext_resource type="Script" path="res://player/states/player_stagger.gd" id="23_0qnx7"]
[ext_resource type="Script" path="res://player/states/player_dash.gd" id="25_bnwnl"]
[ext_resource type="Script" path="res://player/states/player_throw.gd" id="25_smc6p"]
[ext_resource type="Script" path="res://player/states/player_special.gd" id="28_5pf82"]
[ext_resource type="EventAsset" uid="uid://bm34vktxic0m4" path="res://addons/FMOD/editor/resources/events/{4150d69a-72be-4517-a58a-5764382c4bd1}.tres" id="31_48tl8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_48kjw"]
radius = 0.284876
height = 2.5

[sub_resource type="BoxShape3D" id="BoxShape3D_xio6w"]
size = Vector3(1.697, 1.50675, 1.38098)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q2byd"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6oicj"]
radius = 0.961138
height = 3.50669

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("hitbox")]
collision_layer = 2
axis_lock_linear_z = true
script = ExtResource("1_7knqw")
speed = 6.0
min_jump_height = 7.0
max_jump_height = 8.5
jump_force_coefficient = 90.0
dash_cooldown = 0.5
hitbox = NodePath("pmb_kite/Hitbox")
combo = Array[Resource("res://player/attacks/attack_resource.gd")]([ExtResource("2_06grq"), ExtResource("3_msbl5"), ExtResource("4_slkb2")])
air_combo = Array[Resource("res://player/attacks/attack_resource.gd")]([ExtResource("5_4ghsq"), ExtResource("6_56cec"), ExtResource("7_ujuw6")])
zone_in = ExtResource("6_yg4su")
punch = Array[Resource("res://player/attacks/attack_resource.gd")]([ExtResource("9_4hthk")])
air_kick = Array[Resource("res://player/attacks/attack_resource.gd")]([ExtResource("10_w5e58")])
sword = ExtResource("11_5lryx")

[node name="BodyCollision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_48kjw")

[node name="PassThruColliderCheck" parent="." node_paths=PackedStringArray("character") instance=ExtResource("7_c8ppt")]
character = NodePath("..")

[node name="pmb_kite" parent="." instance=ExtResource("12_lvsae")]
transform = Transform3D(-1.25, 4.35984e-16, -1.88745e-07, 4.35984e-16, 1.25, -4.35984e-16, 1.88745e-07, -4.35984e-16, -1.25, 2.08165e-12, -1.25, 2.08165e-12)

[node name="Skeleton3D" parent="pmb_kite/base_human_rig" index="0"]
bones/0/position = Vector3(0, 0.461594, 0)
bones/0/rotation = Quaternion(-0.69554, -0.127372, -0.127372, 0.69554)
bones/1/position = Vector3(0.04243, -0.16876, 1.3652)
bones/1/rotation = Quaternion(0.706981, -0.0133445, 0.0133445, 0.706981)
bones/5/position = Vector3(-0.00186147, 0.0345124, 0.718248)
bones/5/rotation = Quaternion(0.777411, -0.016637, 0.0208366, 0.628428)
bones/5/scale = Vector3(1, 0.999999, 1)
bones/6/rotation = Quaternion(0.0183114, -0.00161994, -0.0250723, 0.999517)
bones/6/scale = Vector3(1.07949, 0.85815, 1.07949)
bones/7/rotation = Quaternion(0.0739047, -0.0103155, -0.0577818, 0.995537)
bones/7/scale = Vector3(0.991171, 1.01924, 0.993294)
bones/8/rotation = Quaternion(-0.106442, 0.00118207, -0.0249715, 0.994005)
bones/8/scale = Vector3(0.938621, 1.12801, 0.947557)
bones/9/rotation = Quaternion(0.233029, 0.00459263, 0.0496756, 0.971189)
bones/11/rotation = Quaternion(-0.228799, 0.00898601, 0.0490713, 0.972195)
bones/12/position = Vector3(0.326992, 0.147534, 1.23673)
bones/12/rotation = Quaternion(0.166976, 0.936479, -0.0392908, 0.305911)
bones/12/scale = Vector3(1, 13.6189, 1)
bones/13/position = Vector3(-0.34613, 0.0654237, 1.27592)
bones/13/rotation = Quaternion(-0.123872, 0.904946, 0.0852968, -0.398062)
bones/13/scale = Vector3(1, 15.2668, 1)
bones/14/position = Vector3(0.207999, -0.367875, 0.558275)
bones/14/rotation = Quaternion(0.946739, 0.143069, -0.227964, -0.176775)
bones/14/scale = Vector3(1, 13.6667, 1)
bones/15/position = Vector3(-0.208019, -0.358478, 0.527428)
bones/15/rotation = Quaternion(0.959524, -0.0987002, 0.183618, -0.18936)
bones/15/scale = Vector3(1, 13.7326, 1)
bones/16/position = Vector3(0.00228228, 1.44783, -0.00602243)
bones/16/rotation = Quaternion(-0.69554, -0.127372, -0.127372, 0.69554)
bones/17/position = Vector3(0, -5.82077e-11, -0.209038)
bones/17/rotation = Quaternion(7.05407e-11, -0.018872, -7.45191e-09, 0.999822)
bones/18/position = Vector3(-0.00711196, -0.0138165, 0.20053)
bones/18/rotation = Quaternion(-0.0205689, -0.00779485, 2.12073e-08, 0.999758)
bones/19/position = Vector3(1.86265e-09, -0.0325834, 0.178428)
bones/19/rotation = Quaternion(0.18594, 0.0701969, -0.00506367, 0.980037)
bones/20/position = Vector3(-0.00355597, -0.0232, 0.195512)
bones/20/rotation = Quaternion(-0.0102851, -0.00389763, 4.58813e-08, 0.99994)
bones/20/scale = Vector3(1, 1, 1)
bones/22/position = Vector3(-0.00355597, -0.120535, -0.00992917)
bones/22/rotation = Quaternion(-0.756083, -0.00258109, 0.00292051, 0.654464)
bones/22/scale = Vector3(1, 1, 1)
bones/30/rotation = Quaternion(0.798929, 0.0827905, -0.0649694, 0.592147)
bones/30/scale = Vector3(0.962741, 0.962741, 0.962741)
bones/31/rotation = Quaternion(0.809167, -3.15895e-08, 1.19019e-08, 0.587579)
bones/31/scale = Vector3(0.995186, 0.995186, 0.995187)
bones/32/rotation = Quaternion(-0.784022, -0.130574, 0.0584167, 0.604026)
bones/32/scale = Vector3(1.04373, 1.04373, 1.04373)
bones/33/position = Vector3(-6.92997e-06, 0.129826, -3.4367e-05)
bones/33/rotation = Quaternion(-0.0709311, 0.970229, -0.230953, -0.0168765)
bones/37/scale = Vector3(1.04373, 1.04373, 1.04373)
bones/39/rotation = Quaternion(1.65403e-08, -0.0811357, 1.77898e-08, 0.996703)
bones/39/scale = Vector3(1.04373, 1.04373, 1.04373)
bones/41/scale = Vector3(1.0387, 1.0387, 1.0387)
bones/42/rotation = Quaternion(8.45553e-08, -0.00757021, 6.79806e-08, 0.999971)
bones/42/scale = Vector3(1.0387, 1.0387, 1.0387)
bones/44/rotation = Quaternion(0.807754, -0.118006, 0.0468545, 0.575685)
bones/44/scale = Vector3(0.961848, 0.961849, 0.961849)
bones/45/rotation = Quaternion(0.914497, 3.74082e-08, 2.05801e-08, 0.404592)
bones/45/scale = Vector3(0.994101, 0.994101, 0.994101)
bones/46/rotation = Quaternion(-0.665848, 0.115143, 0.226474, 0.701497)
bones/46/scale = Vector3(1.04583, 1.04583, 1.04583)
bones/47/position = Vector3(-2.58948e-05, 0.129808, -5.08263e-05)
bones/51/scale = Vector3(1.04583, 1.04583, 1.04583)
bones/53/rotation = Quaternion(1.04908e-07, 0.0675167, 7.88503e-09, 0.997718)
bones/53/scale = Vector3(1.04583, 1.04583, 1.04583)
bones/55/scale = Vector3(1.03966, 1.03966, 1.03966)
bones/56/rotation = Quaternion(3.06687e-08, 0.0278309, 5.11172e-08, 0.999613)
bones/56/scale = Vector3(1.03967, 1.03966, 1.03966)
bones/58/scale = Vector3(1, 1, 1)
bones/59/scale = Vector3(1, 1, 1)
bones/66/rotation = Quaternion(-0.747093, -0.107556, 0.0260227, 0.655444)
bones/67/rotation = Quaternion(-0.432123, 0.00608947, 0.0029179, 0.901789)
bones/67/scale = Vector3(0.96274, 0.96274, 0.96274)
bones/68/rotation = Quaternion(0.809167, -2.30459e-08, 1.65599e-08, 0.587579)
bones/68/scale = Vector3(0.995186, 0.995186, 0.995187)
bones/69/rotation = Quaternion(0.79809, 0.0756681, -0.0745663, 0.593099)
bones/69/scale = Vector3(1, 1, 1)
bones/71/rotation = Quaternion(0.79809, 0.0756682, -0.0745663, 0.593099)
bones/71/scale = Vector3(1.01917, 0.96274, 1.01917)
bones/72/rotation = Quaternion(3.04525e-07, 0.00444803, 4.40675e-08, 0.99999)
bones/73/rotation = Quaternion(0.809209, 0.00453783, -0.00608861, 0.587472)
bones/73/scale = Vector3(1.00242, 0.945505, 1.05568)
bones/74/rotation = Quaternion(-4.94774e-08, -0.0123345, 2.24988e-08, 0.999924)
bones/75/rotation = Quaternion(-0.784369, -0.121621, 0.0692651, 0.604298)
bones/75/scale = Vector3(0.983951, 0.982463, 1.03547)
bones/76/rotation = Quaternion(0.0709071, -0.970262, 0.230824, 0.0168732)
bones/76/scale = Vector3(0.999946, 1.00007, 0.999979)
bones/77/scale = Vector3(1, 1, 1)
bones/78/scale = Vector3(1, 1, 1)
bones/85/rotation = Quaternion(-0.670374, 0.1319, -0.00487216, 0.73019)
bones/86/rotation = Quaternion(-0.510955, -0.00580462, -0.00344996, 0.859581)
bones/86/scale = Vector3(0.961848, 0.961849, 0.961848)
bones/87/rotation = Quaternion(0.914497, 4.42253e-08, 1.77465e-08, 0.404592)
bones/87/scale = Vector3(0.994101, 0.994101, 0.994101)
bones/88/rotation = Quaternion(0.805305, -0.0954153, 0.0783899, 0.579857)
bones/88/scale = Vector3(1, 1, 1)
bones/90/rotation = Quaternion(0.805305, -0.0954156, 0.0783897, 0.579858)
bones/90/scale = Vector3(1.01964, 0.961849, 1.01964)
bones/91/rotation = Quaternion(1.58365e-07, -0.0112601, -6.14416e-08, 0.999937)
bones/92/rotation = Quaternion(0.914214, -0.010922, 0.0251385, 0.404304)
bones/92/scale = Vector3(1.00296, 0.963656, 1.0364)
bones/93/rotation = Quaternion(1.83357e-07, -0.00132206, 1.1644e-08, 0.999999)
bones/94/rotation = Quaternion(-0.666057, 0.116536, 0.228497, 0.700411)
bones/94/scale = Vector3(0.979864, 0.977605, 1.04418)
bones/95/rotation = Quaternion(0.0710304, 0.970267, -0.230765, 0.0168396)
bones/95/scale = Vector3(0.99988, 1.00017, 0.999951)
bones/99/position = Vector3(1.86265e-09, -0.0325834, 0.184461)
bones/99/rotation = Quaternion(0.0934374, 0.0352749, -0.00254456, 0.994997)
bones/100/position = Vector3(7.82972e-05, -0.0022056, -0.0199475)
bones/100/rotation = Quaternion(0.755333, 0.0183798, -0.0228264, 0.654686)
bones/101/position = Vector3(-0.00304912, 0.0131402, -0.00866693)
bones/101/rotation = Quaternion(-0.0179555, 0.0048346, 0.0340247, 0.999248)
bones/104/position = Vector3(-7.45058e-09, 0.151324, -0.000191997)
bones/104/rotation = Quaternion(-0.625174, 0.0235663, -0.0263709, 0.779683)
bones/106/rotation = Quaternion(0.233028, 0.0045926, 0.0496756, 0.971189)
bones/108/rotation = Quaternion(-0.228799, 0.00898601, 0.0490713, 0.972195)
bones/143/rotation = Quaternion(0.0829199, 0.547348, 0.551226, 0.624247)
bones/143/scale = Vector3(0.999998, 1, 0.999998)
bones/152/scale = Vector3(1, 0.999994, 1)
bones/174/rotation = Quaternion(-0.0694338, -0.285016, 0.908576, 0.29738)
bones/174/scale = Vector3(1, 0.999997, 1)
bones/176/rotation = Quaternion(-0.409396, -0.433704, 0.748342, 0.290311)
bones/178/rotation = Quaternion(0.822411, 0.521157, 0.106917, 0.201506)
bones/178/scale = Vector3(0.999999, 1, 0.999999)
bones/188/scale = Vector3(1, 0.999999, 1)
bones/192/rotation = Quaternion(0.0829199, -0.547346, -0.55123, 0.624245)
bones/192/scale = Vector3(1, 0.999999, 1)
bones/223/rotation = Quaternion(-0.0694385, 0.285024, -0.908575, 0.297374)
bones/223/scale = Vector3(0.999997, 1.00001, 0.999997)
bones/228/rotation = Quaternion(-4.32832e-06, 0.251433, -0.442736, 0.860678)
bones/236/rotation = Quaternion(2.7923e-06, 0.440386, 0.217012, 0.871187)
bones/237/rotation = Quaternion(-0.337447, -0.620587, 0.541647, 0.455653)
bones/237/scale = Vector3(0.999997, 1.00001, 0.999997)
bones/243/scale = Vector3(1, 1, 1)
bones/343/rotation = Quaternion(-0.516716, -0.375936, -0.336259, 0.691814)
bones/343/scale = Vector3(1, 0.999997, 1)
bones/349/rotation = Quaternion(-0.480984, -0.352563, -0.388732, 0.702312)
bones/349/scale = Vector3(1, 0.999999, 1)
bones/370/rotation = Quaternion(-0.759765, 0.255444, 0.273447, 0.531726)
bones/370/scale = Vector3(1, 0.999999, 1)
bones/372/rotation = Quaternion(-0.549593, -0.427939, -0.427952, 0.57591)
bones/373/rotation = Quaternion(-0.549591, 0.42794, 0.427949, 0.575914)
bones/388/scale = Vector3(0.999987, 1.00003, 0.999989)
bones/401/rotation = Quaternion(-0.672532, -0.0385155, 0.0317065, 0.738384)
bones/403/rotation = Quaternion(-0.873852, -0.0263092, 0.0423858, 0.483626)
bones/412/rotation = Quaternion(-0.288601, 0.77123, 0.0119353, 0.56725)
bones/412/scale = Vector3(0.971561, 0.97156, 0.971561)
bones/413/rotation = Quaternion(0.743303, -5.68269e-07, -3.7951e-07, 0.668955)
bones/413/scale = Vector3(0.999716, 0.999716, 0.999716)
bones/414/rotation = Quaternion(-0.0668879, -0.783019, -0.277345, 0.552709)
bones/414/scale = Vector3(1.02956, 1.02956, 1.02956)
bones/436/scale = Vector3(1.02956, 1.02956, 1.02956)
bones/438/rotation = Quaternion(1.78686e-07, -0.450276, 2.18206e-07, 0.892889)
bones/438/scale = Vector3(1.02956, 1.02956, 1.02956)
bones/440/scale = Vector3(1.02927, 1.02927, 1.02927)
bones/441/rotation = Quaternion(-1.71826e-07, 0.0305853, 1.0952e-07, 0.999532)
bones/441/scale = Vector3(1.02927, 1.02927, 1.02927)
bones/450/rotation = Quaternion(0.335603, 0.620183, -0.591754, 0.390603)
bones/451/rotation = Quaternion(-0.428244, -0.00426698, -0.00202263, 0.903651)
bones/451/scale = Vector3(0.971561, 0.971561, 0.971561)
bones/452/rotation = Quaternion(0.743303, -5.65268e-07, -3.78451e-07, 0.668955)
bones/452/scale = Vector3(0.999716, 0.999716, 0.999716)
bones/453/rotation = Quaternion(-0.288834, 0.799172, -0.00280761, 0.527155)
bones/455/rotation = Quaternion(-0.288834, 0.799171, -0.00280782, 0.527155)
bones/455/scale = Vector3(1.01453, 0.971561, 1.01453)
bones/456/rotation = Quaternion(-2.92936e-07, -0.0204606, 3.82309e-07, 0.999791)
bones/457/rotation = Quaternion(0.742986, -0.0205436, 0.0227104, 0.668606)
bones/457/scale = Vector3(1.00014, 0.957852, 1.0439)
bones/458/rotation = Quaternion(1.25839e-07, -0.451359, 2.63295e-07, 0.892342)
bones/459/rotation = Quaternion(-0.188893, -0.447461, -0.214467, 0.847409)
bones/459/scale = Vector3(0.98737, 1.0166, 0.997098)
bones/461/rotation = Quaternion(-0.154073, -0.724921, 0.147227, 0.655039)
bones/461/scale = Vector3(0.970681, 0.970681, 0.970681)
bones/462/rotation = Quaternion(0.809094, 4.88477e-07, 3.81368e-07, 0.587679)
bones/462/scale = Vector3(0.999053, 0.999054, 0.999053)
bones/463/rotation = Quaternion(-0.195427, 0.880087, 0.16003, 0.402052)
bones/463/scale = Vector3(1.03118, 1.03118, 1.03118)
bones/485/scale = Vector3(1.03118, 1.03118, 1.03118)
bones/487/rotation = Quaternion(1.54446e-08, 0.53165, 7.1205e-08, 0.846964)
bones/487/scale = Vector3(1.03118, 1.03118, 1.03118)
bones/489/scale = Vector3(1.0302, 1.0302, 1.0302)
bones/490/rotation = Quaternion(-2.05858e-07, -0.0467001, -1.87723e-07, 0.998909)
bones/490/scale = Vector3(1.0302, 1.0302, 1.0302)
bones/499/rotation = Quaternion(0.439336, -0.403566, 0.734088, 0.324396)
bones/500/rotation = Quaternion(-0.479622, 0.00414333, 0.00226512, 0.877462)
bones/500/scale = Vector3(0.970681, 0.970681, 0.970681)
bones/501/rotation = Quaternion(0.809094, 4.95593e-07, 3.7203e-07, 0.587679)
bones/501/scale = Vector3(0.999053, 0.999053, 0.999053)
bones/502/rotation = Quaternion(-0.14274, -0.771465, 0.158238, 0.599523)
bones/504/rotation = Quaternion(-0.14274, -0.771465, 0.158239, 0.599523)
bones/504/scale = Vector3(1.01499, 0.970681, 1.01499)
bones/505/rotation = Quaternion(-2.82275e-07, 0.0274453, -3.97877e-07, 0.999623)
bones/506/rotation = Quaternion(0.808266, 0.0278166, -0.0375859, 0.586958)
bones/506/scale = Vector3(1.00047, 0.959698, 1.04186)
bones/507/rotation = Quaternion(-3.18427e-07, 0.532677, 1.85976e-07, 0.846318)
bones/508/rotation = Quaternion(-0.252033, 0.528924, 0.0244293, 0.810014)
bones/508/scale = Vector3(0.986965, 1.02028, 0.993872)
bones/518/position = Vector3(0.542968, 1.61423, 0.245064)
bones/518/rotation = Quaternion(-0.69554, -0.127372, -0.127372, 0.69554)
bones/519/position = Vector3(-0.10487, 0.083422, -0.11289)
bones/519/rotation = Quaternion(0.462564, -0.422016, 0.714586, -0.311936)
bones/521/position = Vector3(0.607809, 1.70932, -0.31509)
bones/521/rotation = Quaternion(-0.468398, -0.103275, -0.145977, 0.865233)
bones/523/position = Vector3(-0.569014, 1.61423, -0.176336)
bones/523/rotation = Quaternion(-0.69554, -0.127372, -0.127372, 0.69554)
bones/524/position = Vector3(0.173535, -0.132634, 0.00305555)
bones/524/rotation = Quaternion(-0.448966, -0.379927, 0.7783, 0.219849)
bones/527/position = Vector3(-0.217501, 1.84675, -0.593233)
bones/527/rotation = Quaternion(-0.468398, -0.103275, -0.145977, 0.865233)
bones/529/position = Vector3(0.155262, 0.546085, 0.0282141)
bones/529/rotation = Quaternion(-0.69554, -0.127372, -0.127372, 0.69554)
bones/530/position = Vector3(0.0391157, -0.103218, 0.195676)
bones/541/position = Vector3(-0.0164951, 0.789132, 0.940293)
bones/541/rotation = Quaternion(-0.712796, -0.143494, -0.111646, 0.677397)
bones/541/scale = Vector3(1, 1, 1)
bones/542/scale = Vector3(1, 1, 1)
bones/543/position = Vector3(-0.134966, 0.546085, -0.0817715)
bones/543/rotation = Quaternion(-0.69554, -0.127372, -0.127372, 0.69554)
bones/544/position = Vector3(0.00177799, -0.00469175, 0.326126)
bones/544/rotation = Quaternion(0.442554, 0.167711, 0, 0.880919)
bones/555/position = Vector3(-0.573226, 0.757353, 0.729517)
bones/555/rotation = Quaternion(-0.712796, -0.143494, -0.111646, 0.677397)
bones/555/scale = Vector3(1, 1, 1)
bones/556/scale = Vector3(1, 1, 1)

[node name="BoneAttachment3D" parent="pmb_kite/base_human_rig/Skeleton3D" index="5"]
transform = Transform3D(-0.225567, -0.218811, -0.949337, -0.531808, -0.788804, 0.30817, -0.816272, 0.574378, 0.0615631, -0.453742, 1.61729, 0.00918733)

[node name="SwordPivot" parent="pmb_kite/base_human_rig/Skeleton3D/BoneAttachment3D" index="0"]
transform = Transform3D(1, 2.98023e-08, -1.49012e-08, 5.96046e-08, 1, 3.72529e-09, 3.35276e-08, 1.08033e-07, 1, -0.474144, 0.146674, 0.0788526)

[node name="Sword" parent="pmb_kite/base_human_rig/Skeleton3D/BoneAttachment3D" index="1"]
transform = Transform3D(0.0520278, -0.304455, 0.0618498, 0.309106, 0.0570216, 0.0206698, -0.0311739, 0.0572785, 0.308176, 0.443636, -0.0177657, -0.088338)

[node name="Hitbox" type="Area3D" parent="pmb_kite"]
collision_layer = 4
collision_mask = 2112
script = ExtResource("12_u1r6y")

[node name="CollisionShape3D" type="CollisionShape3D" parent="pmb_kite/Hitbox"]
transform = Transform3D(1, 1.35023e-21, -1.42109e-14, 2.74041e-25, 1, 4.76456e-22, 1.13687e-13, 0, 1, 2.09199e-12, 1.069, 1.37)
shape = SubResource("BoxShape3D_xio6w")
disabled = true

[node name="ZoneInDist" type="RayCast3D" parent="pmb_kite"]
enabled = false
target_position = Vector3(0, 0, -8)
collision_mask = 64
collide_with_areas = true
collide_with_bodies = false
debug_shape_thickness = 5

[node name="StayPutDist" type="RayCast3D" parent="pmb_kite"]
enabled = false
target_position = Vector3(0, 0, -2.39)
collision_mask = 64
collide_with_areas = true
collide_with_bodies = false
debug_shape_thickness = 5

[node name="Health" type="Node" parent="."]
script = ExtResource("14_hr7l7")
max_health = 100

[node name="Hurtbox" type="Area3D" parent="." node_paths=PackedStringArray("health")]
collision_layer = 8
collision_mask = 32
script = ExtResource("15_ggx7t")
health = NodePath("../Health")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
shape = SubResource("CapsuleShape3D_q2byd")

[node name="PlayerInteraction" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 4096
monitoring = false
monitorable = false
script = ExtResource("16_apitn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerInteraction"]
shape = SubResource("CapsuleShape3D_6oicj")

[node name="InventoryVis" parent="." instance=ExtResource("17_ui07v")]

[node name="ControllerContainer" type="Node" parent="."]

[node name="HumanController" type="Node" parent="ControllerContainer"]
script = ExtResource("12_1q4mr")

[node name="CutsceneController" type="Node" parent="ControllerContainer"]
script = ExtResource("13_rj60u")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_mjfp3")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_jgl0y")

[node name="Stagger" type="Node" parent="StateMachine"]
script = ExtResource("23_0qnx7")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("6_yy7o3")

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource("7_7qn2t")

[node name="Land" type="Node" parent="StateMachine"]
script = ExtResource("8_m0mi4")

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource("25_bnwnl")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("9_0f5gx")

[node name="ZoneIn" type="Node" parent="StateMachine"]
script = ExtResource("18_0wu4t")

[node name="Throw" type="Node" parent="StateMachine"]
script = ExtResource("25_smc6p")

[node name="Special" type="Node" parent="StateMachine"]
script = ExtResource("28_5pf82")

[node name="walk sfx" type="StudioEventEmitter2D" parent="."]
event = ExtResource("31_48tl8")
preload_samples = true

[node name="StudioListener2D" type="StudioListener2D" parent="."]

[node name="StudioListener3D" type="StudioListener3D" parent="."]

[connection signal="ready" from="." to="StateMachine" method="_on_player_ready"]
[connection signal="turn_around" from="." to="pmb_kite" method="_on_player_turn_around"]
[connection signal="animation_changed" from="pmb_kite/AnimationPlayer" to="StateMachine/Attack" method="_on_animation_player_animation_changed"]
[connection signal="animation_finished" from="pmb_kite/AnimationPlayer" to="StateMachine/Attack" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="pmb_kite/AnimationPlayer" to="StateMachine/Throw" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="pmb_kite/AnimationPlayer" to="StateMachine/Special" method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="pmb_kite/Hitbox" to="StateMachine/Attack" method="_on_hitbox_area_entered"]
[connection signal="death" from="Health" to="." method="_on_health_death"]
[connection signal="hit" from="Hurtbox" to="." method="_on_hurtbox_hit"]
[connection signal="body_entered" from="PlayerInteraction" to="PlayerInteraction" method="_on_body_entered"]
[connection signal="swap_swords" from="PlayerInteraction" to="." method="_on_player_interaction_swap_swords"]

[editable path="pmb_kite"]
